--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,14 @@ buildscript {
 }
 
 apply plugin: 'org.junit.platform.gradle.plugin'
+apply plugin: 'application'
 apply plugin: 'kotlin'
+
+mainClassName = "monkey.MainKt"
+
+run {
+    standardInput = System.in
+}
 
 junitPlatform {
     filters {
