Run monkey scripts

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ run {
     standardInput = System.in
 }
 
+run {
+    if (project.hasProperty("appArgs")) {
+        args Eval.me(appArgs)
+    }
+}
+
 junitPlatform {
     filters {
         engines {
