--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.andreapivetta.monkey'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.2.10'
     ext.spek_version = '1.1.2'
 
     repositories {
